applications/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - image: advplyr/audiobookshelf
          name: audiobookshelf
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /audiobooks
              name: media
              subPath: Audiobooks
            - mountPath: /metadata
              name: media
              subPath: audiobookshelf/metadata
            - mountPath: /config
              name: server
              subPath: audiobookshelf
      restartPolicy: Always
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: media
          persistentVolumeClaim:
            claimName: media
