applications/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: audiobookshelf
  name: audiobookshelf
spec:
  ports:
    - name: "13378"
      port: 13378
      targetPort: 80
  selector:
    app: audiobookshelf
