applications/audiobookshelf/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("audiobookshelf.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: audiobookshelf
          port: 13378
